fixed menu overlap across all pages

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,9 @@ h3{
     margin: 0 0 1em 0;
     font-family: 'Open Sans', sans-serif ;
 }
-
+section{
+    margin-top: 185px;
+}
 
 /******************************
 HEADING
@@ -148,7 +150,9 @@ PAGE: ABOUT
     max-width: 150px;
     margin: 0 auto 30px;
     border-radius: 100%;
+
 }
+
 
 
 
