--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,7 +15,6 @@
     }
     #gallery{
         clear: left;
-        margin-top: 185px;
     }
 
 
